--- a/styles/styles.css
+++ b/styles/styles.css
@@ -167,6 +167,10 @@
     line-height: 140%;
   }
 
+  .accordion-item.arcans {
+    padding: 10px 0;
+  }
+
   .accordion-price {
     border-radius: 60px;
     border: 1px solid rgba(0, 0, 0, 0.2);
